--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
 
+  <button type="submit" class="btn">Submit</button>
 
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
