--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
 
-  <button type="submit" class="btn">Submit</button>
-  <div class="popup">
+  <button type="submit" class="btn" onclick="openPopup()">Submit</button>
+  <div class="popup" id="popup">
     <img src="images/404-tick.png">
     <h2>Thank you!</h2>
     <p>Your details has been submitted successfully... Thanks</p>
-    <button type="button">OK</button>
+    <button type="button" onclick="closePopup()">OK</button>
   </div>
 
     </div>
